operator button logic needs a second pass.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class=solar></div>
         <br>
         <div id='leftButtons'>
-            <button id='sign'>+/-</button>
-            <button id='root'>√</button>
-            <button id='sign'>%</button>
+            <button class ='op' id='sign'>+/-</button>
+            <button class ='op' id='root'>√</button>
+            <button class ='op' id='sign'>%</button>
             <br>
             <button class='numButton' id='7'>7</button>
             <button class='numButton' id='8'>8</button>
@@ -36,10 +36,10 @@
             <button class='numButton' id='decimal'>.</button>
         </div>
         <div id='rightButtons'>
-            <button id='/'>÷</button><br>
-            <button id='*'>x</button><br>
-            <button id='-'>-</button><br>
-            <button id='+'>+</button><br>
+            <button class ='op' id='/'>÷</button><br>
+            <button class ='op' id='*'>x</button><br>
+            <button class ='op' id='-'>-</button><br>
+            <button class ='op' id='+'>+</button><br>
             <button id='='>=</button>
         </div>
 
