Full functionality, fixing bugs

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class=solar></div>
         <br>
         <div id='leftButtons'>
-            <button class ='op' id='sign'>+/-</button>
-            <button class ='op' id='root'>√</button>
-            <button class ='op' id='sign'>%</button>
+            <button class ='op1' id='sign'>+/-</button>
+            <button class ='op1' id='root'>√</button>
+            <button class ='op1' id='per'>%</button>
             <br>
             <button class='numButton' id='7'>7</button>
             <button class='numButton' id='8'>8</button>
@@ -31,9 +31,9 @@
             <button class='numButton' id='2'>2</button>
             <button class='numButton' id='3'>3</button>
             <br>
-            <button id='clear'>clear</button>
+            <button id='clear'>ON/C</button>
             <button class='numButton' id='0'>0</button>
-            <button class='numButton' id='decimal'>.</button>
+            <button id='decimal'>.</button>
         </div>
         <div id='rightButtons'>
             <button class ='op' id='/'>÷</button><br>
