--- a/index.html
+++ b/index.html
@@ -9,41 +9,33 @@
     <div id='container'>
         <div id='screen'>
         </div>
-        <div class=solar></div>
-        <div class=solar></div>
-        <div class=solar></div>
-        <div class=solar></div>
-        <br>
-        <div id='leftButtons'>
+        <div id = 'soloar'>
+            <div class=solar></div><div class=solar></div><div class=solar></div>
+            <div class=solar></div>
+        </div>
+        <br><br><br>
+        <div id='buttonDiv'>
             <button class ='op1' id='sign'>+/-</button>
             <button class ='op1' id='root'>√</button>
             <button class ='op1' id='per'>%</button>
-            <br>
+            <button class ='op' id='/'>÷</button><br>
             <button class='numButton' id='7'>7</button>
             <button class='numButton' id='8'>8</button>
             <button class='numButton' id='9'>9</button>
-            <br>
+            <button class ='op' id='*'>x</button><br>
             <button class='numButton' id='4'>4</button>
             <button class='numButton' id='5'>5</button>
             <button class='numButton' id='6'>6</button>
-            <br>
+            <button class ='op' id='-'>-</button><br>
             <button class='numButton' id='1'>1</button>
             <button class='numButton' id='2'>2</button>
             <button class='numButton' id='3'>3</button>
-            <br>
+            <button class ='op' id='+'>+</button><br>
             <button id='clear'>ON/C</button>
             <button class='numButton' id='0'>0</button>
             <button id='decimal'>.</button>
-        </div>
-        <div id='rightButtons'>
-            <button class ='op' id='/'>÷</button><br>
-            <button class ='op' id='*'>x</button><br>
-            <button class ='op' id='-'>-</button><br>
-            <button class ='op' id='+'>+</button><br>
             <button id='='>=</button>
         </div>
-
-    </div>
 </body>
 
 
